fixed word wrapping issue
Added word-wrap property to make sure that no text overflows or gets clipped out. for example: some countries have so many time zones that the width of the container isn't enough to fit them, in such case we either increase the width which is more complicated to do per overflowing element, or doing it for all elements would break the design so making the text wraps to a new line is the easiest solution.

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ h1 {text-align: center;margin: 1rem auto;}
 #search {margin: 0rem auto 1rem;;padding:5px;width: 100%;height: 42px;text-align: center;border:1px solid #777;border-radius: 1rem;outline: none;font-size: 1rem;}
 .wrp {margin: 1rem auto;padding:5px;background: #ccc;border-radius:.5rem;border-left:5px solid rgb(5, 182, 144);box-shadow: 0 0 5px #777;overflow: hidden;}
 .head {padding: 5px;display: flex;justify-content: space-between;align-items: center;}
-.head span {display: inline-block;vertical-align: top;}
+.head span {display: inline-block;vertical-align: top; word-wrap: anywhere;}
 .body {padding: 5px;}
 .body span {padding: 5px;margin: 5px;display: inline-block;vertical-align: middle;}
 .body-details {text-align: center;padding:5px 0;}
